welcome.lessons.welcome.array.has271.Has271.scala.error
has271:7: error: not found: value num
    if (check271(vu1, vu2, num(i))) {
                           ^